# TranscriptionAPI

./: .gitignore  README.md  api.py  config.py  database.py  main.py  manager.py  models.py  pyproject.toml  requirements.txt
sdk/: colab_sdk.py  whisper_sdk.py  whisper_server.py
