[project]
name = "aria"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "google-genai>=0.1.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.16",
    "websocket-client>=1.7.0",
]
